# Algorithms_Timsort_DPQSort_Heapsort

./: CMakeLists.txt  README.md  kopiec_time.cpp  qsort_time.cpp  timsort_time.cpp
reports/: desktop.ini
results/: res_heapsort.txt  res_qsort.txt  res_qsort1.txt  res_qsort2.txt  res_timsort.txt  wykresy_kopiec.xlsx  wykresy_qsort.xlsx  wykresy_timsort.xlsx
src/: CMakeLists.txt  kopiec.cpp  kopiec.h  qsort.cpp  qsort.h  timsort.cpp  timsort.h
tests/: CMakeLists.txt  kopiec_test.cpp  qsort_test.cpp  timsort_test.cpp
